--- a/new/src/css/index2.css
+++ b/new/src/css/index2.css
@@ -1,6 +1,6 @@
 body, html {
 	height: 100%;
-	width: 100%;
+	width: 100vw;
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
@@ -9,6 +9,7 @@ body, html {
 	color: #333333;
     align-items:center;
   justify-content:center;
+  margin-bottom: 100vh
 	}
 
 ::-webkit-scrollbar {
@@ -19,9 +20,9 @@ body, html {
 
 ::-webkit-scrollbar-thumb {
 	width: 0px ;
-	border-radius:10px;
+	border-radius:0px;
 	background-color: #53a374;
-	height:2px;
+	height:0px;
 }
 
 ::-webkit-scrollbar-button  {
@@ -40,10 +41,10 @@ a:focus{
 	border: none;
 }
 
-/*.mainGIF{
+.mainGIF{
 	height:100vh;
 	width: 100vw;
-}*/
+}
 @font-face {
     font-family: 'leagueSpartan'; /*a name to be used later*/
     src: url('src/fonts/league-spartan-master/_webfonts/leaguespartan-bold.ttf'); /*URL to font*/
@@ -99,7 +100,7 @@ a:focus{
 	color:#000;
 	font-size: 6.5vw;
 	padding-right: 10vw;
-	margin-top: 5vh;
+	margin-top: 3vh;
 	font-weight: 900;
 	font-family: 'Lato', snas-serif;
 }
@@ -108,13 +109,14 @@ a:focus{
     font-size: 1.6vw;
     padding-left: 10vw;
     padding-right: 9vw;
-    padding-top: 5vh;
+    padding-top: 0vh;
     word-spacing:.1vw;
     line-height:28px;
-    font-weight: 400
+    font-weight: 400;
+    margin-top: 3vh
 }
 .readMoreMainButton{
-	margin-top: 15vh;
+	margin-top: 10vh;
 	text-align: center;
 }
 .readMoreMainButton a{
@@ -124,4 +126,25 @@ a:focus{
     border-radius: 5px;
     font-size: 1.3vw;
     font-weight: 700;
+}
+.hideme{
+	opacity: 0;
+	padding-top:0vh
+}
+.navbarAnimate{
+	opacity: 0;
+}
+.borderLine{
+	border-bottom: 1px solid #888;
+	padding-bottom: 15vh;
+}
+.rightBorder{
+	border-right: 1px solid #888;
+}
+.eventDiv{
+	text-align: center;
+	margin-top: 10vh
+}
+.eventHeading{
+	
 }
