--- a/new/src/css/indexMob2.css
+++ b/new/src/css/indexMob2.css
@@ -1,5 +1,9 @@
 @media only screen and (max-width: 768px) {
 
+.mainGIF{
+	height:40vh;
+	width: 100vw;
+}
 .headerLink li a{
 	font-size: 4vw;
 }
@@ -57,8 +61,21 @@
 .footerDetailIcon1 {
     padding-right: 3vw;
 }
-
-
+.copyright {
+    padding-left: 5.3vw;
+    font-size: 3.1vw;
+    padding-top: 8vh;
+}
+.footerSocialIcon {
+    color: #fff;
+    padding: 3vw 7vw;
+    font-size: 5.8vw;
+}
+.nav>li>a {
+    position: relative;
+    display: block;
+    padding: 10px 46px;
+}
 
 
 
