--- a/new/themes/2/js-image-slider1.css
+++ b/new/themes/2/js-image-slider1.css
@@ -6,7 +6,7 @@
 
 #sliderFrame 
 {
-    width:920px;
+    width:90vw;
     margin:0 auto; /*center-aligned*/
     padding:20px;
     box-shadow: 0 0 5px #BBB;
@@ -15,7 +15,7 @@
 }
 
 #slider, #slider .sliderInner {
-    width:680px;height:306px;/* Must be the same size as the slider images */
+    width:70vw;height:70vh;/* Must be the same size as the slider images */
     border-radius:0px;
 }
 
@@ -85,7 +85,8 @@
 {
     float:left;
     margin-left:10px;
-    width:230px;
+    width:18vw;
+    height: 10vh
     font:normal 11px/13px Arial;
     border-top:1px solid #CCC;
     color:#666;
@@ -94,7 +95,7 @@
 {
     border:1px solid #CCC;
     border-top:1px solid #FFF;
-    padding:11px 8px;
+    padding:16px 8px;
     background:#EEE;
     cursor:pointer;
 }
