--- a/new/src/css/index12.css
+++ b/new/src/css/index12.css
@@ -475,3 +475,15 @@ nav.shrink .navbar-toggle {
 }.display{
     display: block;
 }
+.welcomeToMotorsport{
+    z-index: 1;
+    position: absolute;
+    color: #ff0000;
+    font-size: 7vw;
+    background-color: #000;
+    font-weight: 900;
+    opacity: 0.6;
+    top: 0vh;
+    padding: 27vh 24vw 29vh 7vw;
+    word-spacing: 2vw;
+}
