--- a/new/src/css/index12.css
+++ b/new/src/css/index12.css
@@ -368,3 +368,24 @@ a:focus{
     padding: 27vh 24vw 29vh 7vw;
     word-spacing: 2vw;
 }
+.affix {
+      padding-bottom: 15px;
+      top: 0;
+      width: 100%;
+      z-index: 9999 !important;
+
+      nav.navbar.shrink {
+  min-height: 35px;
+}
+nav.shrink a {
+  padding-top: 2px !important;
+  padding-bottom: 2px !important;
+  font-size: 10px;
+}
+nav.shrink .navbar-brand {
+  font-size: 10px;
+}
+nav.shrink .navbar-toggle {
+  padding: 2px 2px;
+  margin: 8px 0 8px 0;
+}
