--- a/new/src/css/index12.css
+++ b/new/src/css/index12.css
@@ -260,6 +260,10 @@ a:focus{
     padding-bottom: 10vh;
     word-spacing: 3px;
 }
+.TEAM
+{
+  color:red;font-size:40px;margin-left:30px;
+}
 
 /* sponsors page*/
 .new-tab{
@@ -311,7 +315,7 @@ a:focus{
   opacity: 0;
   position: absolute;
   top: 50%;
-  left: 35%;
+  left: 25%;
   width: 100%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
