--- a/new/src/css/indexMob2.css
+++ b/new/src/css/indexMob2.css
@@ -162,6 +162,26 @@ font-size:08px;
 .display{
     display: none;
 }
+.aboutHeading{
+    font-size: 9vw;
+    padding-top: 0;
+}
+.goldspons{
+    font-size: 8vw;
+    margin: 53px;
+}
+.sponsorsImage {
+    height: 100px;
+    width: 225px;
+    padding: 20px;
+}
+
+
+
+
+
+
+
 
 
 }
