--- a/new/src/css/index10.css
+++ b/new/src/css/index10.css
@@ -247,7 +247,7 @@ a:focus{
 /* about page*/
 
 .aboutHeading {
-    font-size: 4vw;
+    font-size: 5vw;
     font-weight: 900;
     padding-left: 3.5vw;
     padding-top: 5vh;
@@ -352,4 +352,19 @@ a:focus{
 .sponsorsImage{
         height: 110px;
     width: 250px;
+}
+.staticnaavbar{
+  position: sticky;
+  top:100px;
+  left:150px;
+}
+.goldspons{
+  margin:100px;
+  text-align: center;
+  color: #826436;
+  font-weight: 900;
+  font-size: 2.4vw;
+}
+ae{
+  margin-top: 50px;
 }
