--- a/new/src/css/index12.css
+++ b/new/src/css/index12.css
@@ -477,3 +477,13 @@ nav.shrink .navbar-toggle {
     padding: 27vh 24vw 29vh 7vw;
     word-spacing: 2vw;
 }
+.goldspons{
+  margin:100px;
+  text-align: center;
+  color: #826436;
+  font-weight: 900;
+  font-size: 2.4vw;
+}
+.ae{
+  margin-top: 50px;
+}
