--- a/new/src/css/index12.css
+++ b/new/src/css/index12.css
@@ -6,7 +6,7 @@ body, html {
 	box-sizing: border-box;
 	font-family: 'Lato', sans-serif;
 	letter-spacing: 0.3px;
-	color: #fff ;
+	color: #000 ;
     align-items:center;
   justify-content:center;
   /*margin-bottom: 100vh*/
@@ -147,13 +147,13 @@ a:focus{
 	
 }
 .eventPad{
-	padding-top: 4vh;
+	padding-top: 0vh;
 	padding-bottom: 7vh
 }
 .eventDiv{
 	text-align: center;
 	/*margin-top: 1vh;*/
-	padding-top: 10vh
+	padding-top: 4vh
 }
 .eventHeading{
 	color: #000;
@@ -422,6 +422,89 @@ a:focus{
 }
 .ae{
   margin-top: 50px;
+}
+.portfolio img {
+    max-width: 100%;
+    position: relative;
+}
+.mar-b-30 {
+    margin-bottom: 30px;
+} 
+
+#portfoliolist .portfolio {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    width: 24%;
+    margin-right: 1%;
+    margin-bottom: 1%;
+    display: none;
+    float: left;
+    overflow: hidden;
+    }
+
+.portfolio-wrapper {
+    overflow: hidden;
+    position: relative !important;
+    background: #666;
+    cursor: pointer;
+}
+.portfolio-hover {
+    position: relative;
+    overflow: hidden;
+}
+
+#filters li span.active {
+    background-color: #2c3e50;
+    color: #fff;
+}
+#filters li span {
+    display: block;
+    padding: 5px 20px;
+    text-decoration: none;
+    color: #666;
+    cursor: pointer;
+}
+span.filter {
+    border-radius: 3px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+}
+.image-caption {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100%;
+    padding-top: 35%;
+    display: none;
+    text-align: center;
+    color: #fff !important;
+    z-index: 2;
+}
+ul#filters li {
+    float: left;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+ul#filters {
+    display: inline-block;
+    width: 100%;
+    margin: 25px 0 25px 0;
+}
+#filters {
+    margin: 1%;
+    padding: 0;
+    list-style: none;
+    float:left;
+}
+ul {
+    padding-left: 0;
+}
+ul, ol {
+    margin-top: 0;
+    margin-bottom: 10px;
 }
 .affix {
       padding-bottom: 15px;
