--- a/new/src/css/index13.css
+++ b/new/src/css/index13.css
@@ -6,7 +6,7 @@ body, html {
 	box-sizing: border-box;
 	font-family: 'Lato', sans-serif;
 	letter-spacing: 0.3px;
-	color: black ;
+	color: #000 ;
     align-items:center;
   justify-content:center;
   /*margin-bottom: 100vh*/
@@ -147,13 +147,13 @@ a:focus{
 	
 }
 .eventPad{
-	padding-top: 4vh;
+	padding-top: 0vh;
 	padding-bottom: 7vh
 }
 .eventDiv{
 	text-align: center;
 	/*margin-top: 1vh;*/
-	padding-top: 10vh
+	padding-top: 4vh
 }
 .eventHeading{
 	color: #000;
@@ -317,7 +317,7 @@ a:focus{
   transition: .5s ease;
   opacity: 0;
   position: absolute;
-  top: 36%;
+  top: 42%;
   left: 35%;
   width: 100%;
   transform: translate(-50%, -50%);
@@ -380,10 +380,27 @@ a:focus{
     -webkit-filter: grayscale(0);
     filter: grayscale(0);
 }
+.AEsponsors
+{
+  margin-left:120%;
+}
 .sponsorsImage{
         height: 110px;
     width: 250px;
 }
+.goldsponsorsImage{
+        height: 150px;
+    width: 280px;
+}
+.silversponsorsImage{
+        height: 110px;
+    width: 250px;
+}
+.bronzesponsorsImage{
+        height: 70px;
+    width: 210px;
+}
+
 .display{
     display: block;
 }
@@ -408,7 +425,7 @@ a:focus{
     text-align: center;
     color: #826436;
     font-weight: 900;
-    font-size: 3.4vw;
+    font-size: 4vw;
     margin-top: 1vh;
     margin-bottom: 10vh;
 }
@@ -416,48 +433,110 @@ a:focus{
     text-align: center;
     color: #826436;
     font-weight: 900;
-    font-size: 3.4vw;
+    font-size: 3vw;
     margin-top: 20vh;
     margin-bottom: 17vh;
 }
-.competitio{
-  font-weight: bold;
-  font-size: 3vw;
-  color: black;
-  padding: 1vw;
-  margin: 1vw;
-}
-.compdetails{
-  padding-left: 1vw;
-  font-size: 1.1vw;
-  margin-left: 1vw;
-  margin-bottom: 1vw;
+.bronzespons {
+    text-align: center;
+    color: #826436;
+    font-weight: 900;
+    font-size: 2vw;
+    margin-top: 20vh;
+    margin-bottom: 17vh;
 }
 .ae{
   margin-top: 50px;
 }
-.header
-{
-  position:sticky;
-  top:0px;
-  z-index:1; 
+.portfolio img {
+    max-width: 100%;
+    position: relative;
 }
-.twoline
-{
- font-size:16px;padding-top:3px;
+.mar-b-30 {
+    margin-bottom: 30px;
+} 
+
+#portfoliolist .portfolio {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    width: 24%;
+    margin-right: 1%;
+    margin-bottom: 1%;
+    display: none;
+    float: left;
+    overflow: hidden;
+    }
+
+.portfolio-wrapper {
+    overflow: hidden;
+    position: relative !important;
+    background: #666;
+    cursor: pointer;
 }
-.teamImage
-{
-  display:block;
-  width:165px;
-  height:165px;
-  border-radius:300px;
+.portfolio-hover {
+    position: relative;
+    overflow: hidden;
+}
+
+#filters li span.active {
+    background-color: #2c3e50;
+    color: #fff;
+}
+#filters li span {
+    display: block;
+    padding: 5px 20px;
+    text-decoration: none;
+    color: #666;
+    cursor: pointer;
+}
+span.filter {
+    border-radius: 3px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+}
+.image-caption {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100%;
+    padding-top: 35%;
+    display: none;
+    text-align: center;
+    color: #fff !important;
+    z-index: 2;
+}
+ul#filters li {
+    float: left;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+ul#filters {
+    display: inline-block;
+    width: 100%;
+    margin: 25px 0 25px 0;
+}
+#filters {
+    margin: 1%;
+    padding: 0;
+    list-style: none;
+    float:left;
+}
+ul {
+    padding-left: 0;
+}
+ul, ol {
+    margin-top: 0;
+    margin-bottom: 10px;
 }
 .affix {
       padding-bottom: 15px;
       top: 0;
       width: 100%;
       z-index: 9999 !important;
+
       nav.navbar.shrink {
   min-height: 35px;
 }
@@ -492,4 +571,7 @@ nav.shrink .navbar-toggle {
     top: 0vh;
     padding: 27vh 24vw 29vh 7vw;
     word-spacing: 2vw;
+}
+.mainSliderImages{
+   
 }
