--- a/new/src/css/indexMob2.css
+++ b/new/src/css/indexMob2.css
@@ -192,6 +192,12 @@ font-size:08px;
 .display{
     display: none;
 }
+.teamFaculty
+{
+ width:40px;
+  height:40px;
+  border-radius:0px;
+}
 .hoverDiv {
   transition: .5s ease;
   opacity: 0;
@@ -205,6 +211,10 @@ font-size:08px;
 }
 .headingsCar{
   font-size:  7.5vw;
+}
+.facultyDetails
+{
+  font-size:10px;
 }
 
 }
