--- a/new/src/css/index12.css
+++ b/new/src/css/index12.css
@@ -174,6 +174,10 @@ a:focus{
 	margin-bottom: 1.5vh;
 	padding-top: 6vh 
 }
+.teampos
+{
+  text-align:center;
+}
 .footer{
 	background-color: #333;
 	/*height: 40vh*/
@@ -299,7 +303,7 @@ a:focus{
     }
 
 .imageDiv {
-    position: relative;
+    position: relative;*/
     /*width: 100%;*/
     text-align: center;
 }
@@ -317,12 +321,13 @@ a:focus{
   transition: .5s ease;
   opacity: 0;
   position: absolute;
-  top: 40%;
-  left: 35%;
   width: 100%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   text-align: center;
+  margin:auto;
+  left:34%;
+  top:40%
 }
 .imageDiv:hover .personImage {
   opacity: 0.7;
@@ -344,7 +349,9 @@ a:focus{
 {
   color:blue;
   font-size:20px;
-  padding-left:6px;
+  padding-left:10px;
+  text-align:center;
+  margin:auto;
 }
 .department
 {
@@ -360,7 +367,8 @@ a:focus{
   font-size: 15px;
   padding: 8px 13.5px;
   display: inline;
-  border-radius: 5px
+  border-radius: 5px;
+  margin:auto;
 }
 .hoverIconLinkedin {
   background-color: #007bb6;
@@ -368,7 +376,8 @@ a:focus{
   font-size: 15px;
   padding: 8px 10px;
   display: inline;
-  border-radius: 5px
+  border-radius: 5px;
+  margin:auto;
 }
 .hover08 figure img {
     -webkit-filter: grayscale(100%);
@@ -448,11 +457,11 @@ a:focus{
 }
 .facultyDetails
 {
-   color: #000;
-    font-size: 16px;
+   color:rgba(0,0,0,0.6);
+    font-size: 18px;
     word-spacing:4px;
     line-height:20px;
-    font-weight:250px;
+   text-align:justify;
 }
 .electricJS
 {
@@ -466,6 +475,10 @@ a:focus{
 {
   display:none;
 }
+.makeCenter
+{
+  margin:auto;
+}`
 .affix {
       padding-bottom: 15px;
       top: 0;
