--- a/new/src/css/indexMob2.css
+++ b/new/src/css/indexMob2.css
@@ -202,8 +202,8 @@ font-size:08px;
   transition: .5s ease;
   opacity: 0;
   position: absolute;
-  top: 42%;
-  left: 35%;
+  top: 40%;
+  left: 20%;
   width: 100%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
@@ -216,5 +216,8 @@ font-size:08px;
 {
   font-size:10px;
 }
-
-}
+.teamImage
+{
+  width:65px;
+  height:65px;
+} 
