--- a/new/src/css/index12.css
+++ b/new/src/css/index12.css
@@ -153,7 +153,7 @@ a:focus{
 }
 .eventPad{
 	padding-top: 0vh;
-	padding-bottom: 30vh
+	padding-bottom: 15vh
 }
 .eventDiv{
 	text-align: center;
@@ -162,7 +162,7 @@ a:focus{
 }
 .eventHeading{
 	color: #000;
-    font-size: 3.5vw;
+    font-size: 4vw;
     font-weight: 900;
 }
 .eventHeading2{
@@ -170,14 +170,16 @@ a:focus{
 	margin-top: 7vh
 }
 .eventContent{
-	    font-size: 1.6vw;
+	    font-size: 1.1vw;
     line-height: 28px;
     padding: 0 7.25vw;
     color: #000;
 }
 .eventContentHeading{
 	margin-bottom: 1.5vh;
-	padding-top: 6vh 
+	padding-top: 6vh ;
+      font-size: 1.5vw;
+      font-weight: 700
 }
 .footer{
 	background-color: #333;
@@ -416,19 +418,7 @@ a:focus{
 .display{
     display: block;
 }
-.welcomeToMotorsport{
-    z-index: 1;
-    position: absolute;
-    color: #ff0000;
-    font-size: 5vw;
-    background-color: #000;
-    font-weight: 900;
-    opacity: 0.6;
-    top: 0vh;
-    padding: 27vh 24vw 29vh 7vw;
-    word-spacing: 2vw;
-    height: 100%;
-}
+
 .ElectrifyingRacing{
   z-index: 1;
     position: absolute;
@@ -659,17 +649,20 @@ nav.shrink .navbar-toggle {
 .display{
     display: block;
 }
-.welcomeToMotorsport{
+.welcomeToMotorsport {
     z-index: 1;
     position: absolute;
     color: #ff0000;
-    font-size: 7vw;
+    font-size: 6vw;
     background-color: #000;
     font-weight: 900;
     opacity: 0.6;
     top: 0vh;
-    padding: 27vh 24vw 29vh 7vw;
+    padding: 16vh 75vw 29vh 7vw;
     word-spacing: 2vw;
+}
+.projectSlider{
+  
 }
 .downloadBrochureButton{
   margin-top: -21vh;
