--- a/src/css/index12.css
+++ b/src/css/index12.css
@@ -9,11 +9,12 @@ body, html {
 	color: black ;
     align-items:center;
   justify-content:center;
+  overflow-x: hidden;
   /*margin-bottom: 100vh*/
 	}
 
 ::-webkit-scrollbar {
-    width: 0px ; /*  remove scrollbar space */
+    width:10px ; /*  remove scrollbar space */
     background: transparent;  /* optional: just make scrollbar invisible*/
     height:3px;
 }
@@ -63,7 +64,7 @@ a:focus{
 	width: 13vw;
 	height: auto;
 	margin-left: 28%;
-  margin-top: -2.5vh
+  margin-top: -1vh
 }
 
 .headerLink {
@@ -84,7 +85,10 @@ a:focus{
 
 }
 .mainImage{
-  padding: 0
+position: relative;
+    text-align: center;
+    color: white;
+background-color: #000;
 }
 .headerLink li a:hover{
 	color: #ddd !important;
@@ -111,6 +115,7 @@ a:focus{
 	margin-top: 2vh;
 	font-weight: 900;
 	font-family: 'Lato', snas-serif;
+        text-align:right;
 }
 .aboutUsTextMain{
     color: #000;
@@ -121,7 +126,7 @@ a:focus{
     word-spacing:.1vw;
     line-height:28px;
     font-weight: 400;
-    margin-top: 3vh
+    margin-top:0px;
 }
 .readMoreMainButton{
 	margin-top: 10vh;
@@ -138,7 +143,7 @@ a:focus{
 }
 .hideme{
 	opacity: 1;
-	padding-top:0vh
+	padding-top:0vh;
 }
 .navbarAnimate{
 	opacity: 1;
@@ -440,8 +445,9 @@ a:focus{
 
 }
 .mainfrontimage{
-  height: 100vh !important;
+  height: 933px !important;
   width:100% !important;
+ opacity:0.6;
 }
 .goldspons {
     text-align: center;
@@ -532,10 +538,6 @@ a:focus{
 .flipDown
 {
   cursor:pointer;
-}
-#elecJS,#creativeJS,#mechJS,#marketJS
-{
-  display:none;
 }
 .portfolio img {
     max-width: 100%;
@@ -698,8 +700,34 @@ nav.shrink .navbar-toggle {
   margin-top: 0;
   color: #333
 }
+.center
+{
+  position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+   font-size:80px;
+    font-weight: 900;
+    opacity: 0.6;
+   word-spacing: 2vw;
+  font-family: 'Lato', sans-serif;
+    letter-spacing: 0.3px;
+}
 anchor{
   display: block;
   height: 115px; /*same height as header*/
   margin-top: -115px; /*same height as header*/
 }
+.fixed-nav-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100%;
+  height: 80px;
+}
+hr { 
+    margin-top: 50px;
+    border-style: inset;
+    border-width: 1px;
+} 
