--- a/src/css/indexMob2.css
+++ b/src/css/indexMob2.css
@@ -16,14 +16,16 @@
 .aboutUsHeading {
     font-size: 9.5vw;
     margin-top: 0vh;
+    margin-bottom: 0vh;
     padding-left: 10vw;
+    text-align:center;
 }    
 .aboutUsTextMain {
     font-size: 3.6vw;
     padding-left: 10vw;
     padding-right: 7vw;
     line-height: 26px;
-    margin-top: 0vh;
+    margin-top:0vh;
     word-spacing: -.5vw
 }
 .readMoreMainButton a {
@@ -288,6 +290,38 @@ font-size:08px;
 .facultyDetails
 {
   font-size:10px;
+}
+::-webkit-scrollbar {
+    width:5px ; /*  remove scrollbar space */
+    background: transparent;  /* optional: just make scrollbar invisible*/
+    height:3px;
+}
+
+::-webkit-scrollbar-thumb {
+	width: 0px ;
+	border-radius:0px;
+	background-color: #53a374;
+	height:0px;
+}
+
+::-webkit-scrollbar-button  {
+    height:0px;
+}
+::-webkit-scrollbar-corner  {
+    display:none;
+}
+.recent-work
+{
+	font-size: 8vw;
+	margin-top: 2vh;
+	font-weight: 700;
+	font-family: 'Lato', snas-serif;
+ }
+ .staticnaavbar{
+    background-color:rgba(255,255,255,1);
+}
+.fixed-nav-bar {
+  height: 40px;
 }
 .mobviewcenter{
     display: flex;
