--- a/src/css/index12.css
+++ b/src/css/index12.css
@@ -107,7 +107,7 @@ background-color: #000;
 	background-image: none !important;
 	background-color: #000;
 	color: #fff !important;
-	border-radius: 5px;
+	border-radius: 0px 0px 5px 5px;
 
 }
 .aboutUsHeading{
@@ -478,10 +478,6 @@ background-color: #000;
 }
 .team_nav{
 	padding: 14px;
-=======
-  padding: 15px;
-
->>>>>>> 76d6f2732c7770b558e7548b54f9b2bc62c6dce6
 }
 .mainfrontimage{
   height:750px !important;
@@ -774,7 +770,7 @@ hr {
     border-style: inset;
     border-width: 1px;
 }
-<<<<<<< HEAD
+
 
 .sliderx{
   
@@ -894,17 +890,40 @@ box-shadow: 1px 1px 3px;
   .fixed-nav-bar{height: 7vh;}
 }
 
+.mobile_view{
+	display: none;
+	margin-bottom: 1.7vh;
+	margin-top: -7vh;
+}
+
 @media screen and (max-width: 500px){
 .sliderx{display: block;}
 .desktop_view{display: none;}
+.mobile_view{display: block;}
 
 }
-.carousel-caption{
+.cap{
+	background-color: rgba(0,0,0,.5);
+	font-weight: 800;
+	padding: 3px 60px;
+	border-radius: 20px 20px 9px 9px;
+	box-sizing: border-box;
+	box-shadow: 0px 0px 13px white;
+	text-shadow: 0px 0px 30px black;
+}
+.carousel-caption-about{
 	z-index: 100;
 	color: white;
 	background-color: rgba(0,0,0,.5);
+	height: 9vh;
+	padding: 10px;
+	font-weight: 800;
+	box-sizing: border-box;
+	box-shadow:0px 0px 7px white;
+	text-shadow: 2px 2px 1px black;
 }
-=======
+
+
 .recent-work
 {
     color:#000;
@@ -913,5 +932,6 @@ box-shadow: 1px 1px 3px;
 	font-weight: 700;
 	font-family: 'Lato', snas-serif;
     text-align:center;
+    padding-top: 1.5vh;
  }
->>>>>>> 76d6f2732c7770b558e7548b54f9b2bc62c6dce6
+
